complate update an existing user.
